fixed sidebar gap

--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -19,7 +19,7 @@ font-weight: 500;
 }
 
 .is-active-profile {
-    background-color: red;
+    background-color: rgb(255, 255, 255);
 }
 
 .is-active-profile path{
